# daml

./: .bazelrc  BUILD  WORKSPACE  azure-pipelines.yml  bazel-haskell-deps.bzl  build.ps1  deps.bzl  stack-snapshot.yaml
ci/: configure-bazel.sh
compiler/daml-lf-tools/src/DA/Daml/LF/: Simplifier.hs
compiler/damlc/daml-compiler/src/DA/Daml/Compiler/: DataDependencies.hs  Repl.hs
compiler/damlc/daml-ide-core/src/Development/IDE/Core/Rules/: Daml.hs
compiler/damlc/daml-ide-core/test/Development/IDE/State/API/: Testing.hs
compiler/damlc/daml-lf-conversion/src/DA/Daml/: LFConversion.hs
compiler/damlc/daml-opts/daml-opts/DA/Daml/: Options.hs
compiler/damlc/lib/DA/Cli/: Damlc.hs
compiler/damlc/stable-packages/: BUILD.bazel
compiler/scenario-service/server/src/main/scala/com/digitalasset/daml/lf/: ScenarioServiceMain.scala
daml-assistant/integration-tests/src/DA/Daml/Assistant/: IntegrationTests.hs
daml-lf/engine/src/main/scala/com/digitalasset/daml/lf/engine/: Engine.scala
daml-lf/engine/src/test/scala/com/digitalasset/daml/lf/engine/: EngineTest.scala
daml-lf/transaction/src/main/scala/com/digitalasset/daml/lf/crypto/: Hash.scala
daml-lf/transaction/src/main/scala/com/digitalasset/daml/lf/transaction/: Transaction.scala
docs/source/app-dev/: app-arch.rst
language-support/hs/bindings/test/DA/Ledger/: Tests.hs
language-support/ts/codegen/src/: TsCodeGenMain.hs
language-support/ts/codegen/tests/: BUILD.bazel
language-support/ts/codegen/tests/src/DA/Test/: Daml2Ts.hs
ledger-service/http-json/src/main/scala/com/digitalasset/http/: Config.scala
ledger/ledger-api-common/src/main/scala/com/digitalasset/ledger/api/validation/: CommandsValidator.scala  SubmitAndWaitRequestValidator.scala  SubmitRequestValidator.scala
ledger/ledger-api-common/src/main/scala/com/digitalasset/platform/server/api/services/grpc/: GrpcCommandService.scala  GrpcCommandSubmissionService.scala
ledger/ledger-api-common/src/main/scala/com/digitalasset/platform/server/api/validation/: FieldValidations.scala
ledger/ledger-api-common/src/test/suite/scala/com/digitalasset/ledger/api/validation/: SubmitRequestValidatorTest.scala
ledger/ledger-api-domain/src/main/scala/com/digitalasset/ledger/api/: domain.scala
ledger/participant-state-index/src/main/scala/com/daml/ledger/participant/state/index/v2/: IndexSubmissionService.scala
ledger/participant-state/kvutils/src/main/protobuf/: daml_kvutils.proto
ledger/participant-state/protobuf/: ledger_configuration.rst
ledger/participant-state/protobuf/com/daml/ledger/participant/state/: ledger_configuration.proto
ledger/participant-state/src/main/scala/com/daml/ledger/participant/state/v1/: Configuration.scala  SubmitterInfo.scala  package.scala
ledger/sandbox/: BUILD.bazel
ledger/sandbox/src/main/scala/com/digitalasset/platform/apiserver/: ApiServices.scala  CommandExecutorImpl.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/apiserver/services/: ApiCommandService.scala  ApiSubmissionService.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/configuration/: SubmissionConfiguration.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/index/: LedgerBackedIndexService.scala  MeteredReadOnlyLedger.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/sandbox/: SandboxServer.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/sandbox/cli/: Cli.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/sandbox/config/: SandboxConfig.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/sandboxnext/: Main.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/store/: BaseLedger.scala  ReadOnlyLedger.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/store/dao/: JdbcLedgerDao.scala  LedgerDao.scala
ledger/sandbox/src/test/lib/scala/com/digitalasset/platform/sandbox/services/: SandboxFixture.scala
ledger/sandbox/src/test/suite/scala/com/digitalasset/platform/store/dao/: JdbcLedgerDaoSpec.scala
nix/: ghc.nix
release/src/: Main.hs  Options.hs
(+11 files in other folders)
