# Copyright (c) 2020 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_binary")

da_haskell_binary(
    name = "gsp",
    srcs = glob(["src/**/*.hs"]),
    hackage_deps = [
        "base",
        "bytestring",
        "optparse-applicative",
        "text",
    ],
    main_function = "GenerateStablePackage.main",
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/daml-lf-ast",
        "//compiler/daml-lf-proto",
        "//compiler/damlc/daml-lf-conversion",
        "//libs-haskell/da-hs-base",
    ],
)

genrule(
    name = "gen-stable-packages",
    srcs = [],
    outs = [
        "daml-prim/GHC-Types.dalf",
        "daml-prim/GHC-Prim.dalf",
        "daml-prim/GHC-Tuple.dalf",
        "daml-prim/DA-Internal-Erased.dalf",
        "daml-prim/DA-Internal-PromotedText.dalf",
        "daml-prim/DA-Types.dalf",
        "daml-stdlib/DA-Internal-Template.dalf",
        "daml-stdlib/DA-Internal-Any.dalf",
        "daml-stdlib/DA-Time-Types.dalf",
        "daml-stdlib/DA-NonEmpty-Types.dalf",
        "daml-stdlib/DA-Date-Types.dalf",
        "daml-stdlib/DA-Semigroup-Types.dalf",
        "daml-stdlib/DA-Monoid-Types.dalf",
        "daml-stdlib/DA-Logic-Types.dalf",
        "daml-stdlib/DA-Validation-Types.dalf",
        "daml-stdlib/DA-Internal-Down.dalf",
    ],
    cmd = """
      $(location :gsp) --module GHC.Types -o $(location daml-prim/GHC-Types.dalf)
      $(location :gsp) --module GHC.Prim -o $(location daml-prim/GHC-Prim.dalf)
      $(location :gsp) --module GHC.Tuple -o $(location daml-prim/GHC-Tuple.dalf)
      $(location :gsp) --module DA.Internal.Erased -o $(location daml-prim/DA-Internal-Erased.dalf)
      $(location :gsp) --module DA.Internal.PromotedText -o $(location daml-prim/DA-Internal-PromotedText.dalf)
      $(location :gsp) --module DA.Types -o $(location daml-prim/DA-Types.dalf)
      $(location :gsp) --module DA.Time.Types -o $(location daml-stdlib/DA-Time-Types.dalf)
      $(location :gsp) --module DA.NonEmpty.Types -o $(location daml-stdlib/DA-NonEmpty-Types.dalf)
      $(location :gsp) --module DA.Date.Types -o $(location daml-stdlib/DA-Date-Types.dalf)
      $(location :gsp) --module DA.Semigroup.Types -o $(location daml-stdlib/DA-Semigroup-Types.dalf)
      $(location :gsp) --module DA.Monoid.Types -o $(location daml-stdlib/DA-Monoid-Types.dalf)
      $(location :gsp) --module DA.Logic.Types -o $(location daml-stdlib/DA-Logic-Types.dalf)
      $(location :gsp) --module DA.Validation.Types -o $(location daml-stdlib/DA-Validation-Types.dalf)
      $(location :gsp) --module DA.Internal.Down -o $(location daml-stdlib/DA-Internal-Down.dalf)
      # These types are not serializable but they leak into typeclass methods so they need to be stable.
      $(location :gsp) --module DA.Internal.Any -o $(location daml-stdlib/DA-Internal-Any.dalf)
      $(location :gsp) --module DA.Internal.Template -o $(location daml-stdlib/DA-Internal-Template.dalf)
    """,
    tools = [":gsp"],
    visibility = ["//visibility:public"],
)

# If you change this you also need to update generateStablePackages in Development.IDE.Core.Rules.Daml
filegroup(
    name = "stable-packages",
    srcs = [
        "daml-prim/DA-Internal-Erased.dalf",
        "daml-prim/DA-Internal-PromotedText.dalf",
        "daml-prim/DA-Types.dalf",
        "daml-prim/GHC-Prim.dalf",
        "daml-prim/GHC-Tuple.dalf",
        "daml-prim/GHC-Types.dalf",
        "daml-stdlib/DA-Date-Types.dalf",
        "daml-stdlib/DA-Internal-Any.dalf",
        "daml-stdlib/DA-Internal-Down.dalf",
        "daml-stdlib/DA-Internal-Template.dalf",
        "daml-stdlib/DA-Logic-Types.dalf",
        "daml-stdlib/DA-Monoid-Types.dalf",
        "daml-stdlib/DA-NonEmpty-Types.dalf",
        "daml-stdlib/DA-Semigroup-Types.dalf",
        "daml-stdlib/DA-Time-Types.dalf",
        "daml-stdlib/DA-Validation-Types.dalf",
    ],
    visibility = ["//visibility:public"],
)
